<resources>
    <string name="app_name">RLMS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_data_available">No data found</string>

    <string name="action_settings">Settings</string>
    <string name="complaints_uppr_case">COMPLAINTS</string>
    <string name="lift_config_uppr_case">LIFT CONFIG</string>
    <string name="update_params_uppr_case">UPDATE PARAMS</string>
    <string name="upload_photos_uppr_case">UPLOAD PHOTOS</string>
    <string name="upload_locations_uppr_case">UPLOAD LOCATION</string>
    <string name="logout_uppr_case">LOGOUT</string>
    <string name="try_again">Failed to execute. Please try again</string>
    <string name="successfully_fetched_complaints">Fetched complaints successfully</string>
    <string name="network_connection_error">Please check your network connection</string>
    <string name="details_fix">Details </string>
    <string name="address_str">Address </string>
    <string name="pending_since">Pending Since</string>
    <string name="title_str">Title</string>
    <string name="mark_resolve">Mark As Resolve</string>
    <string name="get_directions">Get Directions</string>
    <string name="user_Registration">User Registration</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="signup_str">Signup</string>
    <string name="already_register">Already Registered? Signin Here</string>
    <string name="user_login">User Login</string>
    <string name="sign_up">Register</string>
    <string name="no_account">Not have an account? Signup Here\"</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="registering_wait">Registering Please Wait...</string>
    <string name="registering_please_wait">Registering please wait...</string>
    <string name="regitration_error">Registration Error</string>
    <string name="updating_status">Updating status...</string>
    <string name="updated_status_success">Updated status successfully</string>
    <string name="rlms_login">RLMS Login</string>
    <string name="loading_complaints">Loading complaints...</string>
    <string name="rlms_registration">RLMS Registration</string>
    <string name="singing_in">Logging In...</string>
    <string name="sign_in">Login</string>
    <string name="logged_out_success">Logged out successfully</string>
    <string name="select_lift">Select Lift</string>
    <string name="select_title_lift">Select Title</string>
    <string name="title">Title</string>
    <string name="lift">Lift</string>
    <string name="description">Description</string>
    <string name="complaints">Complaints</string>
    <string name="complaints_toolbar">COMPLAINTS</string>
    <string name="failed_to_register">Failed to register</string>
    <string name="registration_succes">Registration successful!!!</string>
    <string name="registration_date">Registration Date</string>
    <string name="proceed">Proceed</string>
    <string name="resolved">Resolved</string>
    <string name="profile">Profile</string>
    <string name="filter">Filter</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_mobile_hint">Enter mobile number</string>
    <string name="pl_enter_mobile">Please enter valid mobile number</string>
    <string name="login_failed">Failed to login. Please try again</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="tech_registration_succes">Technician registered successfully</string>
    <string name="failed_to_register_tech">Failed to register technician</string>
    <string name="update_status_str">Update Status</string>
    <string name="enter_title_hint">Enter title</string>
    <string name="visit_details_fix">Visit Details</string>
    <string name="enter_description_hint">Enter description</string>
    <string name="start_visit">Start Visit</string>
    <string name="update_visit">Update Visit</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Lonitude</string>
    <string name="last_update_time_label">Last updated Time</string>
    <string name="location_updated_message">Location updated</string>
    <string name="send_message">Send /message</string>

    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="remarks">Remarks</string>
    <string name="remarks_hint">Enter description Here</string>
    <string name="desc">Description</string>
    <string name="remarks_title">Add some Description or remark about the visit</string>
    <string name="total_time">Total Time</string>

    <!--added new strings-->
    <string name="generic_error_and_retry">Oops.. Something went wrong. Try again?</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint2">Password</string>
    <string name="email_address_validity_msg">Please enter valid email-address</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="default_mandatory_field_messgae">Field is required.</string>
    <string name="first_name_validity_msg">Please enter valid first-name</string>
    <string name="last_name_validity_msg">Please enter valid last-name</string>
    <string name="phone_number_validation_pattern">^[1-9][0-9]{9}$</string>
    <string name="phone_number_validity_msg">Please enter valid phone-number</string>
    <string name="sign_up_submit">Sign Up</string>
    <string name="invalid_password">Please enter valid password.</string>
    <string name="invalid_email_id">Please enter valid email-address.</string>
    <string name="http_400">Error while processing request</string>
    <string name="http_401">Authentication failed. Incorrect user email or password</string>
    <string name="http_generic">Error while processing request</string>
    <string name="server_conn_error">No Network Connectivity. Please Check internet Connection</string>
    <string name="parsing_error">Error while parsing response.</string>
    <string name="something_went_wrong">Oops... Something went Wrong. Please try again</string>
    <string name="no_connection">No Network Connectivity. Please Check internet Connection.</string>
    <string name="http_500">Error while processing request</string>
</resources>
