<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_complaints"
            android:icon="@drawable/ic_rate_review"
            android:title="@string/complaints_uppr_case" />
        <item
            android:id="@+id/nav_lift_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/lift_config_uppr_case" />
        <item
            android:id="@+id/nav_update_params"
            android:icon="@drawable/ic_tune"
            android:title="@string/update_params_uppr_case" />
        <item
            android:id="@+id/nav_upload_photos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/upload_photos_uppr_case" />
        <!--<item-->
            <!--android:id="@+id/nav_upload_location"-->
            <!--android:icon="@drawable/ic_edit_location"-->
            <!--android:title="@string/upload_locations_uppr_case" />-->
    </group>
  <!--  <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_power_settings_new"
        android:title="@string/logout_uppr_case" />-->
    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
