<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fontify="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_lay"
        android:id="@+id/scrollview"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/DodgerBlue"
                android:gravity="left|center"
                android:paddingLeft="25dp"
                android:text="@string/update_status_str"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/title_label_tv"
                android:layout_width="@dimen/complaint_text_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_lablel_tv"
                android:layout_marginLeft="@dimen/spinner_margin"
                android:layout_marginRight="@dimen/spinner_margin"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/title"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@color/DodgerBlue"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spinner_margin"
                android:gravity="left|center"
                android:hint="@string/enter_title_hint"
                android:inputType="text"
                android:visibility="gone"
                android:paddingLeft="5dp"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:background="@color/BattleshipGray" />

            <TextView
                android:id="@+id/details_label_tv"
                android:layout_width="@dimen/complaint_text_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_lablel_tv"
                android:layout_marginLeft="@dimen/spinner_margin"
                android:layout_marginRight="@dimen/spinner_margin"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/details_fix"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@color/DodgerBlue"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spinner_margin"
                android:gravity="left|center"
                android:hint="@string/enter_description_hint"
                android:inputType="text"
                android:visibility="gone"
                android:paddingLeft="5dp"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:background="@color/BattleshipGray" />

            <TextView
                android:id="@+id/visit_details_label_tv"
                android:layout_width="@dimen/complaint_text_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_lablel_tv"
                android:layout_marginLeft="@dimen/spinner_margin"
                android:layout_marginRight="@dimen/spinner_margin"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/visit_details_fix"
                android:textAllCaps="false"
                android:textColor="@color/DodgerBlue"
                android:textSize="14dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/visit_details_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/titleTv"
                android:layout_marginTop="5dp"
                android:paddingBottom="30dp"
                android:scrollbars="vertical" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/bottom_lay"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:weightSum="1">

        <Button
            android:id="@+id/start_visit_btn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="50dp"
            android:background="@color/DodgerBlue"
            android:gravity="center"
            android:text="@string/update_visit"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <Button
            android:id="@+id/mark_resolve_btn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="50dp"
            android:background="@color/DodgerBlue"
            android:gravity="center"
            android:text="@string/mark_resolve"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>