<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rlms_login"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/DodgerBlue"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/et_mobile_input_layout"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="9096136234"
                android:digits="1234567890"
                android:hint="@string/enter_mobile_hint"
                android:inputType="number"
                android:imeActionId="@+id/buttonSignin"
                android:imeOptions="actionGo"
                android:imeActionLabel="@string/common_signin_button_text"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/address"
            android:layout_margin="15dp"
            android:gravity="left|top"
            android:hint="@string/enter_address_hint"
            android:inputType="text"
            android:maxLines="3"
            android:padding="5dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/DodgerBlue"
            android:text="@string/sign_in"
            android:textColor="@color/White" />

        <!--  <TextView
              android:text="@string/no_account"
              android:id="@+id/textViewSignUp"
              android:textAlignment="center"
              android:layout_margin="15dp"
              android:visibility="gone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />-->

    </LinearLayout>

</RelativeLayout>